rust/test/dt/type_constructor/dynamic/make/make_too_many.rs
use type_constructor as TheModule;
use TheModule::prelude::*;

fn main()
{
  let x = make!( 0, 1, 2, 3 );
}
